Migrated from browserify to webpack because of react

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -10,7 +10,7 @@
          </div>
          <div class="footer__column column">
             <h6 class="column__title">Enterpise</h6>
-            <a href="../groupe.html" class="column__link">Qui sommes-nous?</a>
+            <a href="../about-us.html" class="column__link">Qui sommes-nous?</a>
             <a href="../actualites.html" class="column__link">Actualites</a>
             <a href="../contact.html" class="column__link">Contact</a>
             <a href="" class="column__link">Politique de confidentialite</a>
