--- a/src/cours-de-cuivre.html
+++ b/src/cours-de-cuivre.html
@@ -8,20 +8,21 @@
 		@@include('html/nav-bar.html',{})
 		<main>
 			<div class="container">
-				<button class="sticky-button button">
-					<a href="#contact">nous contacter</a>
-				</button>
+				<a href="#contact">
+					<button class="sticky-button button">nous contacter</button>
+				</a>
 				<h1 id="rate" class="hero__title">Current rate</h1>
-				<div class="chart">
-					<canvas id="weeklyChart" class="chart__container"></canvas>
-				</div>
 				<div class="chart">
 					<canvas id="yearlyChart" class="chart__container"></canvas>
 				</div>
 			</div>
 		</main>
+		<section class="calendar">
+			<div id="calendar-root"></div>
+		</section>
 		@@include('html/form.html')
 		@@include('html/footer.html',{})
+		<script src="js/react-bundle.js"></script>
 		<script type="module" src="js/app.min.js"></script>
 	</body>
 </html>
