--- a/src/html/form.html
+++ b/src/html/form.html
@@ -1,6 +1,6 @@
 <section id="contact" class="_contact">
   <div class="contact__content container">
-    <form action="/submit-form" method="POST" enctype="multipart/form-data" class="form" id="form">
+    <form action="/submit-form" method="POST" class="form" id="form">
       <input type="text" placeholder="Société" class="form__input" id="company" name="company">
       <input type="text" placeholder="* Nom, prenom" class="form__input" id="first-second-name" name="fullName">
       <span class="error" id="name-error"></span>
