--- a/src/html/nav-bar.html
+++ b/src/html/nav-bar.html
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li class="nav__item">
-          <a href="groupe.html" class="nav__link">
+          <a href="about-us.html" class="nav__link">
             A propos de nous
           </a>
         </li>
